<resources>
    <string name="app_name">ToDo List</string>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="retypepassword">Retypepassword</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">NewUser?</string>
    <string name="already_register">AlreadyRegister?</string>
    <string name="Login">Click Here to Login</string>
    <string name="Register">Click Here to Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="_02_02_2020">02/02/2020</string>
    <string name="user_name">User Name</string>
    <string name="email_user">EmailAddress</string>
    <string name="logout">Logout</string>
    <string name="mainmenu">MainMenu</string>
    <string name="about">About</string>


</resources>
